@@ -697,7 +697,7 @@ void ST_Ticker(void)
   st_oldhealth = plyr->health;
 }
 
-static int st_palette = 0;
+int st_palette = 0;
 
 void ST_doPaletteStuff(void)
 {
